--- a/chart.yaml
+++ b/chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: helm-configmap
 data:
   DATABASE_URL: {{ .Values.database.url }}
   API_KEY: {{ .Values.apiKey }}
