--- a/example-configmap.yaml
+++ b/example-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: example-configmap
+  name: example-configmap-helm
 data:
   DATABASE_URL: "mysql://myuser:mypassword@mysql-server:3306/mydatabase"
   API_KEY: "my-api-key"
